parser/tiger_parser.go
// Code generated from ./grammar/tiger.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // tiger

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type tigerParser struct {
	*antlr.BaseParser
}

var tigerParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func tigerParserInit() {
	staticData := &tigerParserStaticData
	staticData.literalNames = []string{
		"", "':='", "'|'", "'&'", "'='", "'<>'", "'<'", "'>='", "'>'", "'<='",
		"'+'", "'-'", "'*'", "'/'", "'('", "';'", "')'", "','", "'['", "']'",
		"'of'", "'.'", "'{'", "'}'", "'if'", "'then'", "'else'", "'while'",
		"'do'", "'for'", "'to'", "'let'", "'in'", "'end'", "'type'", "'array'",
		"':'", "'function'", "'var'", "'nil'", "'break'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "ID", "STR", "INT", "COMMENT", "WS",
	}
	staticData.ruleNames = []string{
		"program", "expression", "operationOu", "operationEt", "operationComparaison",
		"operationAddition", "operationMultiplication", "expressionUnaire",
		"sequenceInstruction", "operationNegation", "expressionValeur", "expressionValeur2",
		"operationSi", "operationTantque", "operationBoucle", "definition",
		"declaration", "declarationType", "declarationType2", "declarationChamp",
		"declarationFonction", "declarationValeur", "constantes", "identifiant",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// tigerParserInit initializes any static state used to implement tigerParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewtigerParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TigerParserInit() {
	staticData := &tigerParserStaticData
	staticData.once.Do(tigerParserInit)
}

// NewtigerParser produces a new parser instance for the optional input antlr.TokenStream.
func NewtigerParser(input antlr.TokenStream) *tigerParser {
	TigerParserInit()
	this := new(tigerParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &tigerParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "tiger.g4"

	return this
}

// tigerParser tokens.
const (
	tigerParserEOF     = antlr.TokenEOF
	tigerParserT__0    = 1
	tigerParserT__1    = 2
	tigerParserT__2    = 3
	tigerParserT__3    = 4
	tigerParserT__4    = 5
	tigerParserT__5    = 6
	tigerParserT__6    = 7
	tigerParserT__7    = 8
	tigerParserT__8    = 9
	tigerParserT__9    = 10
	tigerParserT__10   = 11
	tigerParserT__11   = 12
	tigerParserT__12   = 13
	tigerParserT__13   = 14
	tigerParserT__14   = 15
	tigerParserT__15   = 16
	tigerParserT__16   = 17
	tigerParserT__17   = 18
	tigerParserT__18   = 19
	tigerParserT__19   = 20
	tigerParserT__20   = 21
	tigerParserT__21   = 22
	tigerParserT__22   = 23
	tigerParserT__23   = 24
	tigerParserT__24   = 25
	tigerParserT__25   = 26
	tigerParserT__26   = 27
	tigerParserT__27   = 28
	tigerParserT__28   = 29
	tigerParserT__29   = 30
	tigerParserT__30   = 31
	tigerParserT__31   = 32
	tigerParserT__32   = 33
	tigerParserT__33   = 34
	tigerParserT__34   = 35
	tigerParserT__35   = 36
	tigerParserT__36   = 37
	tigerParserT__37   = 38
	tigerParserT__38   = 39
	tigerParserT__39   = 40
	tigerParserID      = 41
	tigerParserSTR     = 42
	tigerParserINT     = 43
	tigerParserCOMMENT = 44
	tigerParserWS      = 45
)

// tigerParser rules.
const (
	tigerParserRULE_program                 = 0
	tigerParserRULE_expression              = 1
	tigerParserRULE_operationOu             = 2
	tigerParserRULE_operationEt             = 3
	tigerParserRULE_operationComparaison    = 4
	tigerParserRULE_operationAddition       = 5
	tigerParserRULE_operationMultiplication = 6
	tigerParserRULE_expressionUnaire        = 7
	tigerParserRULE_sequenceInstruction     = 8
	tigerParserRULE_operationNegation       = 9
	tigerParserRULE_expressionValeur        = 10
	tigerParserRULE_expressionValeur2       = 11
	tigerParserRULE_operationSi             = 12
	tigerParserRULE_operationTantque        = 13
	tigerParserRULE_operationBoucle         = 14
	tigerParserRULE_definition              = 15
	tigerParserRULE_declaration             = 16
	tigerParserRULE_declarationType         = 17
	tigerParserRULE_declarationType2        = 18
	tigerParserRULE_declarationChamp        = 19
	tigerParserRULE_declarationFonction     = 20
	tigerParserRULE_declarationValeur       = 21
	tigerParserRULE_constantes              = 22
	tigerParserRULE_identifiant             = 23
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expression() IExpressionContext
	EOF() antlr.TerminalNode

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tigerParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tigerParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(tigerParserEOF, 0)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case tigerVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *tigerParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, tigerParserRULE_program)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Expression()
	}
	{
		p.SetState(49)
		p.Match(tigerParserEOF)
	}

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOperationOu() []IOperationOuContext
	OperationOu(i int) IOperationOuContext

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tigerParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tigerParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) AllOperationOu() []IOperationOuContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOperationOuContext); ok {
			len++
		}
	}

	tst := make([]IOperationOuContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOperationOuContext); ok {
			tst[i] = t.(IOperationOuContext)
			i++
		}
	}

	return tst
}

func (s *ExpressionContext) OperationOu(i int) IOperationOuContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperationOuContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperationOuContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case tigerVisitor:
		return t.VisitExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *tigerParser) Expression() (localctx IExpressionContext) {
	this := p
	_ = this

	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, tigerParserRULE_expression)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.OperationOu()
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == tigerParserT__0 {
		{
			p.SetState(52)
			p.Match(tigerParserT__0)
		}
		{
			p.SetState(53)
			p.OperationOu()
		}

	}

	return localctx
}

// IOperationOuContext is an interface to support dynamic dispatch.
type IOperationOuContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOperationEt() []IOperationEtContext
	OperationEt(i int) IOperationEtContext

	// IsOperationOuContext differentiates from other interfaces.
	IsOperationOuContext()
}

type OperationOuContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationOuContext() *OperationOuContext {
	var p = new(OperationOuContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tigerParserRULE_operationOu
	return p
}

func (*OperationOuContext) IsOperationOuContext() {}

func NewOperationOuContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationOuContext {
	var p = new(OperationOuContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tigerParserRULE_operationOu

	return p
}

func (s *OperationOuContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationOuContext) AllOperationEt() []IOperationEtContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOperationEtContext); ok {
			len++
		}
	}

	tst := make([]IOperationEtContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOperationEtContext); ok {
			tst[i] = t.(IOperationEtContext)
			i++
		}
	}

	return tst
}

func (s *OperationOuContext) OperationEt(i int) IOperationEtContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperationEtContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperationEtContext)
}

func (s *OperationOuContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationOuContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperationOuContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case tigerVisitor:
		return t.VisitOperationOu(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *tigerParser) OperationOu() (localctx IOperationOuContext) {
	this := p
	_ = this

	localctx = NewOperationOuContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, tigerParserRULE_operationOu)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.OperationEt()
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == tigerParserT__1 {
		{
			p.SetState(57)
			p.Match(tigerParserT__1)
		}
		{
			p.SetState(58)
			p.OperationEt()
		}

		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IOperationEtContext is an interface to support dynamic dispatch.
type IOperationEtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOperationComparaison() []IOperationComparaisonContext
	OperationComparaison(i int) IOperationComparaisonContext

	// IsOperationEtContext differentiates from other interfaces.
	IsOperationEtContext()
}

type OperationEtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationEtContext() *OperationEtContext {
	var p = new(OperationEtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tigerParserRULE_operationEt
	return p
}

func (*OperationEtContext) IsOperationEtContext() {}

func NewOperationEtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationEtContext {
	var p = new(OperationEtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tigerParserRULE_operationEt

	return p
}

func (s *OperationEtContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationEtContext) AllOperationComparaison() []IOperationComparaisonContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOperationComparaisonContext); ok {
			len++
		}
	}

	tst := make([]IOperationComparaisonContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOperationComparaisonContext); ok {
			tst[i] = t.(IOperationComparaisonContext)
			i++
		}
	}

	return tst
}

func (s *OperationEtContext) OperationComparaison(i int) IOperationComparaisonContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperationComparaisonContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperationComparaisonContext)
}

func (s *OperationEtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationEtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperationEtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case tigerVisitor:
		return t.VisitOperationEt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *tigerParser) OperationEt() (localctx IOperationEtContext) {
	this := p
	_ = this

	localctx = NewOperationEtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, tigerParserRULE_operationEt)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.OperationComparaison()
	}
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == tigerParserT__2 {
		{
			p.SetState(65)
			p.Match(tigerParserT__2)
		}
		{
			p.SetState(66)
			p.OperationComparaison()
		}

		p.SetState(71)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IOperationComparaisonContext is an interface to support dynamic dispatch.
type IOperationComparaisonContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOperationAddition() []IOperationAdditionContext
	OperationAddition(i int) IOperationAdditionContext

	// IsOperationComparaisonContext differentiates from other interfaces.
	IsOperationComparaisonContext()
}

type OperationComparaisonContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationComparaisonContext() *OperationComparaisonContext {
	var p = new(OperationComparaisonContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tigerParserRULE_operationComparaison
	return p
}

func (*OperationComparaisonContext) IsOperationComparaisonContext() {}

func NewOperationComparaisonContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationComparaisonContext {
	var p = new(OperationComparaisonContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tigerParserRULE_operationComparaison

	return p
}

func (s *OperationComparaisonContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationComparaisonContext) AllOperationAddition() []IOperationAdditionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOperationAdditionContext); ok {
			len++
		}
	}

	tst := make([]IOperationAdditionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOperationAdditionContext); ok {
			tst[i] = t.(IOperationAdditionContext)
			i++
		}
	}

	return tst
}

func (s *OperationComparaisonContext) OperationAddition(i int) IOperationAdditionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperationAdditionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperationAdditionContext)
}

func (s *OperationComparaisonContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationComparaisonContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperationComparaisonContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case tigerVisitor:
		return t.VisitOperationComparaison(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *tigerParser) OperationComparaison() (localctx IOperationComparaisonContext) {
	this := p
	_ = this

	localctx = NewOperationComparaisonContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, tigerParserRULE_operationComparaison)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.OperationAddition()
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1008) != 0 {
		{
			p.SetState(73)
			_la = p.GetTokenStream().LA(1)

			if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1008) != 0) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}
		{
			p.SetState(74)
			p.OperationAddition()
		}

	}

	return localctx
}

// IOperationAdditionContext is an interface to support dynamic dispatch.
type IOperationAdditionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOperationMultiplication() []IOperationMultiplicationContext
	OperationMultiplication(i int) IOperationMultiplicationContext

	// IsOperationAdditionContext differentiates from other interfaces.
	IsOperationAdditionContext()
}

type OperationAdditionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationAdditionContext() *OperationAdditionContext {
	var p = new(OperationAdditionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tigerParserRULE_operationAddition
	return p
}

func (*OperationAdditionContext) IsOperationAdditionContext() {}

func NewOperationAdditionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationAdditionContext {
	var p = new(OperationAdditionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tigerParserRULE_operationAddition

	return p
}

func (s *OperationAdditionContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationAdditionContext) AllOperationMultiplication() []IOperationMultiplicationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IOperationMultiplicationContext); ok {
			len++
		}
	}

	tst := make([]IOperationMultiplicationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IOperationMultiplicationContext); ok {
			tst[i] = t.(IOperationMultiplicationContext)
			i++
		}
	}

	return tst
}

func (s *OperationAdditionContext) OperationMultiplication(i int) IOperationMultiplicationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOperationMultiplicationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOperationMultiplicationContext)
}

func (s *OperationAdditionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationAdditionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperationAdditionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case tigerVisitor:
		return t.VisitOperationAddition(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *tigerParser) OperationAddition() (localctx IOperationAdditionContext) {
	this := p
	_ = this

	localctx = NewOperationAdditionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, tigerParserRULE_operationAddition)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(77)
		p.OperationMultiplication()
	}
	p.SetState(82)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == tigerParserT__9 || _la == tigerParserT__10 {
		{
			p.SetState(78)
			_la = p.GetTokenStream().LA(1)

			if !(_la == tigerParserT__9 || _la == tigerParserT__10) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}
		{
			p.SetState(79)
			p.OperationMultiplication()
		}

		p.SetState(84)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IOperationMultiplicationContext is an interface to support dynamic dispatch.
type IOperationMultiplicationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllExpressionUnaire() []IExpressionUnaireContext
	ExpressionUnaire(i int) IExpressionUnaireContext

	// IsOperationMultiplicationContext differentiates from other interfaces.
	IsOperationMultiplicationContext()
}

type OperationMultiplicationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationMultiplicationContext() *OperationMultiplicationContext {
	var p = new(OperationMultiplicationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = tigerParserRULE_operationMultiplication
	return p
}

func (*OperationMultiplicationContext) IsOperationMultiplicationContext() {}

func NewOperationMultiplicationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationMultiplicationContext {
	var p = new(OperationMultiplicationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = tigerParserRULE_operationMultiplication

	return p
}

func (s *OperationMultiplicationContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationMultiplicationContext) AllExpressionUnaire() []IExpressionUnaireContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpressionUnaireContext); ok {
			len++
		}
	}

	tst := make([]IExpressionUnaireContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpressionUnaireContext); ok {
			tst[i] = t.(IExpressionUnaireContext)
			i++
		}
	}

	return tst
}

func (s *OperationMultiplicationContext) ExpressionUnaire(i int) IExpressionUnaireContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionUnaireContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionUnaireContext)
}

func (s *OperationMultiplicationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationMultiplicationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}
